hphp/hack/test/typecheck/coeffects/strict-contexts/leak_safe_local-ops.php.exp
File "leak_safe_local-ops.php", line 14, characters 3-12:
Writing to static properties requires the capability Globals, which is not provided by the context. Add the context `[globals]` after the function parameter list (or amend an existing context with a new comma delineated entry `globals`). (Parsing[1002])
File "leak_safe_local-ops.php", line 13, characters 3-6:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "leak_safe_local-ops.php", line 12, characters 31-39:
  From this declaration, the context of this function body provides the capability set {ReadGlobals, System, WriteProperty}
  File "pseudofunctions.hhi", line 44, characters 12-15:
  But the function being called requires the capability IO
